--- a/rnote-ui/data/ui/penssidebar/brushpage.ui
+++ b/rnote-ui/data/ui/penssidebar/brushpage.ui
@@ -25,6 +25,35 @@
       <object class="GtkBox">
         <property name="orientation">vertical</property>
         <child>
+          <object class="GtkMenuButton" id="brushstyle_preset">
+            <property name="hexpand">true</property>
+            <property name="halign">fill</property>
+            <property name="direction">left</property>
+            <property name="tooltip_text" translatable="yes">Brush preset</property>
+            <property name="popover">brushstyle_popover</property>
+            <child>
+              <object class="GtkImage" id="brushstyle_image">
+                <style>
+                  <class name="sidebar_action_image" />
+                </style>
+                <property name="icon-name">pen-brush-style-solid-symbolic</property>
+                <property name="icon-size">large</property>
+              </object>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSeparator">
+        <property name="orientation">vertical</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
+        <property name="vexpand">false</property>
+        <child>
           <object class="GtkMenuButton" id="brushstyle_menubutton">
             <property name="hexpand">true</property>
             <property name="halign">fill</property>
